<package>
  <name>lane_follower</name>
  <version>1.12.13</version>
  <description>lane_follower</description>
  <maintainer email="hersh@willowgarage.com">Dave Hershberger</maintainer>
  <author>Eitan Marder-Eppstein</author>
  <license>BSD</license>
  <url>http://ros.org/wiki/pose_follower</url>
  <buildtool_depend version_gte="0.5.68">catkin</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>nav_core</build_depend>
  <build_depend>base_local_planner</build_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>motion_planner</build_depend>
  <run_depend>motion_planner</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>nav_core</run_depend>
  <run_depend>base_local_planner</run_depend>
  <run_depend>costmap_2d</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>pluginlib</run_depend>

<export>
    <nav_core plugin="${prefix}/lane_following_plugin.xml" />
</export>

</package>


